[gd_scene load_steps=16 format=3 uid="uid://c6hjuvsdmrh53"]

[ext_resource type="Script" path="res://scripts/sound_manager.gd" id="1_or5hm"]
[ext_resource type="AudioStream" uid="uid://bg1qdatrbnp8h" path="res://assets/audio/money_collected_1.ogg" id="2_rvsdn"]
[ext_resource type="AudioStream" uid="uid://bip3pfu8y1oot" path="res://assets/audio/keycard_collected_1.ogg" id="3_eowgc"]
[ext_resource type="AudioStream" uid="uid://dkckdmu3drbok" path="res://assets/audio/screwdriver_collected_1.ogg" id="4_ajulm"]
[ext_resource type="AudioStream" uid="uid://2gayydbmuv3h" path="res://assets/audio/shop_purchase_1.ogg" id="5_g2wmj"]
[ext_resource type="AudioStream" uid="uid://n85j23xkb0mv" path="res://assets/audio/locker_enter_1.ogg" id="6_cc5pq"]
[ext_resource type="AudioStream" uid="uid://gp6yjk1gbblf" path="res://assets/audio/locker_exit_1.ogg" id="7_w1kwh"]
[ext_resource type="AudioStream" uid="uid://b05hgahj046rv" path="res://assets/music/music_ambient_1.ogg" id="8_65vtr"]
[ext_resource type="AudioStream" uid="uid://bpm1ftu32hs02" path="res://assets/music/music_calm_1.ogg" id="8_m6s70"]
[ext_resource type="AudioStream" uid="uid://cqcucrw8k6pn2" path="res://assets/music/music_imminent_1.ogg" id="9_236o1"]
[ext_resource type="AudioStream" uid="uid://btlkboat0y7bk" path="res://assets/music/music_chase_1.ogg" id="10_7endt"]

[sub_resource type="Animation" id="Animation_tuxhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_488mw"]
resource_name = "music_fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_oawc8"]
resource_name = "music_fade_out"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6utn4"]
_data = {
"RESET": SubResource("Animation_tuxhs"),
"music_fade_in": SubResource("Animation_488mw"),
"music_fade_out": SubResource("Animation_oawc8")
}

[node name="sound_manager" type="Node2D"]
script = ExtResource("1_or5hm")

[node name="money_collected_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rvsdn")
volume_db = -6.0
bus = &"UI"

[node name="keycard_collected_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eowgc")
volume_db = -6.0
bus = &"UI"

[node name="screwdriver_collected_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ajulm")
volume_db = -6.0
bus = &"UI"

[node name="shop_purchase_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g2wmj")
volume_db = -6.0
bus = &"UI"

[node name="locker_enter_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cc5pq")
volume_db = -6.0
bus = &"UI"

[node name="locker_exit_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_w1kwh")
volume_db = -6.0
bus = &"UI"

[node name="music_calm_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_m6s70")
autoplay = true
bus = &"Music"

[node name="music_ambient_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_65vtr")
volume_db = -80.0
bus = &"Music"

[node name="music_ambient_1_anim" type="AnimationPlayer" parent="music_ambient_1"]
libraries = {
"": SubResource("AnimationLibrary_6utn4")
}

[node name="music_imminent_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_236o1")
volume_db = -80.0
bus = &"Music"

[node name="music_imminent_1_anim" type="AnimationPlayer" parent="music_imminent_1"]
libraries = {
"": SubResource("AnimationLibrary_6utn4")
}

[node name="music_chase_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_7endt")
bus = &"Music"
